# bsb-core

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  cores_test.json  human_cerebellum.ini  morphologies.hdf5  mouse_cerebellum.ini  nest_microrcircuit.py  network_architecture.py  network_configuration.json  plugins.txt  pyproject.toml  requirements.txt  scaffold.py  scaffold.sh  scaffold_functions.py  scaffold_params.py  setup.py  tmp.h5  zork.py
.github/: pull_request_template.md
.github/devops/: generate_public_api.py  install-nest.sh
.github/workflows/: api.yml  black.yml  branch.yml  build.yml  deploy_pypi.yml  docs.yml  documentation-links.yml  ebrains.yml  isort.yml  main.yml  pull_request.yml  release.yml  validate-pr.yml
.semaphore/: semaphore.yml
bsb/: __init__.py  __main__.py  _cli.py  _contexts.py  _encoding.py  _mpi.py  _options.py  _package_spec.py  _pool.py  _profiling.py  _util.py  blender.py  cell_types.py  cli.py  config.py  core.py  exceptions.py  functions.py  helpers.py  listeners.py  mixins.py  models.py  morphologies.py  networks.py  option.py  options.py  output.py  particles.py  plotting.py  plugins.py  postprocessing.py  profiling.py  reporting.py  simulation.py  statistics.py  trees.py  voxels.py
bsb/blender/: __init__.py  _mixin.py
bsb/cli/: __init__.py  contexts.py  options.py
bsb/config/: __init__.py  _attrs.py  _compile.py  _config.py  _distributions.py  _hooks.py  _make.py  _parse_types.py  nodes.py  parsers.py  refs.py  types.py
bsb/configurations/: .gitignore  casali_2019.json  mouse_cerebellum_cortex.json  mouse_cerebellum_cortex_io_dcn.json  mouse_cerebellum_cortex_noTouch.json  mouse_cerebellum_cortex_with_dcn_io.json
bsb/connectivity/: __init__.py  general.py  import_.py  strategy.py
bsb/core/: __init__.py  _encoding.py  reporting.py  scaffold.py
bsb/morphologies/: __init__.py  selector.py  synthesis.py
bsb/objects/: __init__.py  cell_type.py  layer.py  partition.py  region.py
bsb/placement/: __init__.py  arrays.py  distributor.py  import_.py  indicator.py  particle.py  random.py  randomwalk.py  satellite.py  strategy.py
bsb/services/: __init__.py  _pool_listeners.py  _provider.py  _util.py  mpi.py  mpilock.py  plotting.py  pool.py
bsb/simulation/: __init__.py  _backends.py  adapter.py  cell.py  component.py  connection.py  device.py  parameter.py  results.py  simulation.py  targetting.py
bsb/simulators/: nest.py
bsb/storage/: __init__.py  _chunks.py  _files.py  _util.py  decorators.py  interfaces.py
bsb/topology/: __init__.py  _layout.py  partition.py  region.py
bsb/unittest/: __init__.py  engines.py  parallel.py
devops/: check_nest_cache.sh  install.sh  install_nest.sh  install_nest_modules.sh
devops/blender-pipe/: jrender.slurm  jsequence.slurm  load_blender.sh  render.py  sequence.py
docs/: .gitignore  conf.py  index.rst  parsed.txt  requirements.txt
docs/bsb/: bsb.cli.commands.rst  bsb.config.parsers.rst  bsb.config.rst  bsb.config.templates.rst  bsb.connectivity.detailed.rst  bsb.connectivity.geometric.rst  bsb.connectivity.point_cloud.rst  bsb.connectivity.rst  bsb.morphologies.parsers.rst  bsb.morphologies.rst  bsb.placement.rst  bsb.rst  bsb.services.rst  bsb.simulation.rst  bsb.simulators.arbor.devices.rst  bsb.simulators.arbor.rst  bsb.simulators.neuron.devices.rst  bsb.simulators.neuron.rst  bsb.simulators.rst  bsb.storage.engines.in_memory.rst  bsb.storage.engines.rst  bsb.storage.rst  modules.rst
docs/cells/: cells-toc.rst  intro.rst
docs/cli/: cli-toc.rst  commands.rst  intro.rst  options.rst
docs/components/: components-toc.rst  components.rst  intro.rst  scaffold.rst
docs/config/: _empty_root_nodes.rst  _full_cell_type_node.rst  _full_connectivity_node.rst  _full_network_node.rst  _full_partition_node.rst  _full_placement_node.rst  _full_region_node.rst  configuration-toc.rst  files.rst  intro.rst  nodes.rst  reference.rst  types.rst
docs/connectivity/: component.rst  connection-strategies.rst  connectivity-set.rst  connectivity-strategy.rst  connectivity-toc.rst  create_shapescomposition.py  defining.rst  geometric.rst  point-cloud.rst  point_cloud.rst
docs/core/: core-toc.rst  job-distribution.rst  scaffold.rst  storage.rst
docs/dev/: dev-toc.rst  documentation.rst  faq.rst  guidelines.rst  hooks.rst  installation.rst  plugins.rst  projects.rst  reference.rst  services.rst
docs/examples/: label_cells.rst  place_distribution.rst  plot_morpho.rst  toc.rst
docs/getting-started/: _empty_config_example.rst  analyze_results.rst  basics.rst  getting-started.json  getting-started.rst  getting-started_reconstruction.rst  getting_started.py  guide-simulation.py  toc.rst  (+11 more)
obfuscation/: setup_linux.py  setup_windows.py
scaffold/: __init__.py  _config.py  cli.py  config.py  connectivity.py  core.py  debug.py  exceptions.py  functions.py  geometries.py  helpers.py  models.py  morphologies.py  networks.py  output.py  particles.py  placement.py  plotting.py  plugins.py  postprocessing.py  quantities.py  reporting.py  scaffold.py  simulation.py  statistics.py  trees.py  voxels.py
scaffold.egg-info/: PKG-INFO  SOURCES.txt
tests/: .gitignore  morphologies.hdf5  profiling.py  required_plugins.txt  test_arbor.py  test_chunks.py  test_cli.py  test_compilation.py  test_configuration.py  test_connectivity.py  test_core.py  test_densities.py  test_distributors.py  test_double_neuron.json  test_double_neuron_network.json  test_double_neuron_network_homosyn.json  test_entities.py  test_env_options.py  test_fiber_intersection.py  test_geometric_connectivity.py  test_geometric_shapes.py  test_issues.py  test_jobs.py  test_morphologies.py  test_nest.py  test_neuron.py  test_options.py  test_parsers.py  test_parsing.py  test_placement.py  test_placement_set.py  test_plasticity.py  test_plugins.py  test_point_cloud_connectivity.py  test_postprocessing.py  test_projects.py  test_purkinje_densities.py  test_rotated_morphologies.py  test_selectors.py  test_simulation.py  (+7 more)
(+511 files in other folders)
