[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsb-core"
authors = [{ name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "numpy~=1.19",
    "scipy~=1.5",
    "scikit-learn~=1.0",
    "colour~=0.1",
    "errr~=1.2",
    "rtree~=1.0",
    "psutil~=5.8",
    "pynrrd~=1.0",
    "morphio~=3.3",
    "toml",
    "requests~=2.30",
    "urllib3~=2.0",
    "appdirs~=1.4",
    "neo[nixio]",
    "tqdm~=4.50",
    "dashing-next",
    "shortuuid",
    "quantities",
    "exceptiongroup",
]

[tool.flit.module]
# The `bsb-core` package installs the `bsb` Python module
name = "bsb"

[project.urls]
Home = "https://github.com/dbbs-lab/bsb"
Documentation = "https://bsb.readthedocs.io/"
"Bug Tracker" = "https://github.com/dbbs-lab/bsb/issues/"
"Source Code" = "https://github.com/dbbs-lab/bsb/"

[project.scripts]
bsb = "bsb.cli:handle_cli"

[project.entry-points."bsb.storage.engines"]
fs = "bsb.storage.fs"

[project.entry-points."bsb.commands"]
commands = "bsb.cli.commands._commands"
projects = "bsb.cli.commands._projects"

[project.entry-points."bsb.options"]
verbosity = "bsb._options:verbosity"
sudo = "bsb._options:sudo"
version = "bsb._options:version"
config = "bsb._options:config"
profiling = "bsb._options:profiling"
debug_pool = "bsb._options:debug_pool"

[project.optional-dependencies]
parallel = [
    "mpi4py~=3.0",
    "mpipool>=2.2.1,<3",
    "mpilock~=1.1"
]
test = [
    "bsb-arbor==0.0.0b3",
    "bsb-hdf5==1.0.0b6",
    "bsb-test==0.0.0b19",
    "coverage~=7.3",
]
docs = [
    "sphinx~=7.0",
    "furo~=2023.9",
    "sphinxemoji~=0.2.0",
    "sphinx_design~=0.5.0",
    "sphinx-copybutton~=0.5.0",
    "sphinxext-bsb~=0.2.2",
    "bsb-json>=0.0.0b7",
    "bsb-yaml>=0.0.0b5",
]
dev = [
    "bsb-core[test,docs]",
    "build~=1.0",
    "twine~=4.0",
    "pre-commit~=3.5",
    "black~=24.1.1",
    "isort~=5.12",
    "snakeviz~=2.1",
    "bump-my-version~=0.18"
]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "4.0.0-rc0"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash seperator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[tool.bumpversion.parts.pre_l]
values = ["dev", "a", "b", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "bsb/__init__.py"