[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsb-core"
authors = [{ name = "Robin De Schepper", email = "robingilbert.deschepper@unipv.it" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "numpy~=1.19",
    "scipy~=1.5",
    "scikit-learn~=1.0",
    "errr~=1.2",
    "rtree~=1.0",
    "psutil~=5.8",
    "pynrrd~=1.0",
    "morphio~=3.3",
    "toml~=0.10.0",
    "requests~=2.30",
    "urllib3~=2.0",
    "appdirs~=1.4",
    "neo[nixio]",
    "tqdm~=4.50",
    "dashing-next~=0.1",
    "shortuuid~=1.0",
    "quantities~=0.15.0",
    "exceptiongroup>=1.2.0",
]

[tool.flit.module]
# The `bsb-core` package installs the `bsb` Python module
name = "bsb"

[project.urls]
Home = "https://github.com/dbbs-lab/bsb"
Documentation = "https://bsb.readthedocs.io/"
"Bug Tracker" = "https://github.com/dbbs-lab/bsb/issues/"
"Source Code" = "https://github.com/dbbs-lab/bsb/"

[project.scripts]
bsb = "bsb.cli:handle_cli"

[project.entry-points."bsb.storage.engines"]
fs = "bsb.storage.fs"

[project.entry-points."bsb.commands"]
commands = "bsb.cli.commands._commands"
projects = "bsb.cli.commands._projects"

[project.entry-points."bsb.options"]
verbosity = "bsb._options:verbosity"
sudo = "bsb._options:sudo"
version = "bsb._options:version"
config = "bsb._options:config"
profiling = "bsb._options:profiling"
debug_pool = "bsb._options:debug_pool"

[project.optional-dependencies]
parallel = [
    "mpi4py~=3.0",
    "mpipool>=2.2.1,<3",
    "mpilock~=1.1"
]
test = [
    "bsb-arbor~=4.0",
    "bsb-hdf5~=5.0",
    "bsb-test~=4.2",
    "bsb-json~=4.2",
    "coverage~=7.3",
]
docs = [
    "sphinx~=7.0",
    "furo~=2024.4",
    "sphinxemoji~=0.2.0",
    "sphinx_design~=0.5.0",
    "sphinx-copybutton~=0.5.0",
    "sphinxext-bsb~=0.2.2",
    "bsb-json~=4.0",
    "bsb-yaml~=4.0",
]
dev = [
    "bsb-core[test,docs]",
    "build~=1.0",
    "twine~=4.0",
    "pre-commit~=3.5",
    "black~=24.1.1",
    "isort~=5.12",
    "snakeviz~=2.1",
    "bump-my-version~=0.24"
]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "5.0.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "docs: bump version: {current_version} → {new_version} [skip ci]"
commit_args = "--no-verify"

[tool.bumpversion.parts.pre_l]
values = ["dev", "a", "b", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "bsb/__init__.py"
